# clad

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  clad.c  clad.pc  gen.c  parser.c  string_buffer.c  string_buffer.h  xml.c  xml.h
files/: template.c  template.h
src/: CMakeLists.txt  clad.c  string_buffer.c  string_buffer.h  string_view.c  string_view.h  template.c  template.h  xml.c  xml.h
